@@ -3,12 +3,10 @@ package com.example.serviceimpl;
 import com.example.dto.request.UserRegisterRequestDTO;
 import com.example.dto.response.PageResponse;
 import com.example.dto.response.UserResponseDTO;
-import com.example.mapper.UserMapper;
 import com.example.model.Role;
 import com.example.model.User;
+import com.example.repository.RoleRepository;
 import com.example.repository.UserRepository;
-import com.example.security.JwtUtil;
-import com.example.service.RoleService;
 import com.example.service.UserService;
 
 import lombok.RequiredArgsConstructor;
@@ -20,53 +18,56 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.Set;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class UserServiceImpl implements UserService {
 
     private final UserRepository userRepository;
-    private final JwtUtil jwtUtil;
+    private final RoleRepository roleRepository;
     private final PasswordEncoder passwordEncoder;
-    private final RoleService roleService;
 
-    // =========================
-    // REGISTER
-    // =========================
+    // ================= CURRENT USER =================
+    private User getCurrentUser() {
+        String email = SecurityContextHolder.getContext()
+                .getAuthentication()
+                .getName();
+
+        return userRepository.findByEmailIgnoreCase(email)
+                .orElseThrow(() -> new RuntimeException("User not found"));
+    }
+
+    // ================= REGISTER =================
     @Override
-    public User register(UserRegisterRequestDTO request) {
+    public User register(UserRegisterRequestDTO dto) {
 
-        if (userRepository.existsByEmailIgnoreCase(request.getEmail())) {
-            throw new RuntimeException("Email already exists");
+        if (userRepository.existsByEmailIgnoreCaseOrPhone(dto.getEmail(), dto.getPhone())) {
+            throw new RuntimeException("Email or phone already exists");
         }
 
         User user = new User();
+        user.setFirstName(dto.getFirstName());
+        user.setLastName(dto.getLastName());
+        user.setEmail(dto.getEmail());
+        user.setPhone(dto.getPhone());
+        user.setPassword(passwordEncoder.encode(dto.getPassword()));
+        user.setIsActive(true);
 
-        user.setFirstName(request.getFirstName());
-        user.setLastName(request.getLastName());
-        user.setEmail(request.getEmail());
-        user.setPhone(request.getPhone());
-        user.setPassword(passwordEncoder.encode(request.getPassword()));
-
-        Role role = roleService.getByName("ROLE_USER")
+        Role role = roleRepository.findByName("ROLE_USER")
                 .orElseThrow(() -> new RuntimeException("Role not found"));
 
-        user.setRoles(Set.of(role));
-        user.setIsActive(true);
+        user.addRole(role);
 
         return userRepository.save(user);
     }
 
-    // =========================
-    // LOGIN
-    // =========================
+    // ================= LOGIN =================
     @Override
     public User login(String email, String password) {
 
-        User user = userRepository
-                .findByEmailIgnoreCaseAndIsActiveTrue(email)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+        User user = userRepository.findByEmailIgnoreCaseAndIsActiveTrue(email)
+                .orElseThrow(() -> new RuntimeException("Invalid email"));
 
         if (!passwordEncoder.matches(password, user.getPassword())) {
             throw new RuntimeException("Invalid password");
@@ -75,62 +76,62 @@ public class UserServiceImpl implements UserService {
         return user;
     }
 
-    // =========================
-    // JWT LOGIN
-    // =========================
     @Override
     public String loginAndGenerateToken(String email, String password) {
-
-        User user = userRepository
-                .findByEmailIgnoreCaseAndIsActiveTrue(email)
-                .orElseThrow(() -> new RuntimeException("User not found"));
-
-        if (!passwordEncoder.matches(password, user.getPassword())) {
-            throw new RuntimeException("Invalid password");
-        }
-
-        List<String> roles = user.getRoles()
-                .stream()
-                .map(Role::getName)
-                .toList();
-
-        return jwtUtil.generateToken(user.getEmail(), roles);
+        // handled in controller (JWT)
+        return "Handled in controller";
     }
 
-    // =========================
-    // GET BY ID (DTO)
-    // =========================
+    // ================= GET BY ID =================
     @Override
     public Optional<UserResponseDTO> getById(Long id) {
-        return userRepository.findByIdWithRoles(id)
-                .map(UserMapper::toDTO);
+
+        User targetUser = userRepository.findByIdWithRoles(id)
+                .orElseThrow(() -> new RuntimeException("User not found"));
+
+        User currentUser = getCurrentUser();
+
+        boolean isSelf = targetUser.getId().equals(currentUser.getId());
+
+        boolean isAdmin = currentUser.getRoles().stream()
+                .anyMatch(r -> r.getName().equals("ROLE_ADMIN"));
+
+        if (!isSelf && !isAdmin) {
+            throw new RuntimeException("Access Denied");
+        }
+
+        return Optional.of(mapToDTO(targetUser));
     }
 
-    // =========================
-    // GET ALL (DTO)
-    // =========================
+    // ================= GET ALL =================
     @Override
     public List<UserResponseDTO> getAll() {
+
+        User currentUser = getCurrentUser();
+
+        boolean isAdmin = currentUser.getRoles().stream()
+                .anyMatch(r -> r.getName().equals("ROLE_ADMIN"));
+
+        if (!isAdmin) {
+            throw new RuntimeException("Access Denied");
+        }
+
         return userRepository.findAllWithRoles()
                 .stream()
-                .map(UserMapper::toDTO)
-                .toList();
+                .map(this::mapToDTO)
+                .collect(Collectors.toList());
     }
 
-    // =========================
-    // ACTIVE USERS (DTO)
-    // =========================
+    // ================= ACTIVE USERS =================
     @Override
     public List<UserResponseDTO> getActiveUsers() {
         return userRepository.findActiveUsersWithRoles()
                 .stream()
-                .map(UserMapper::toDTO)
-                .toList();
+                .map(this::mapToDTO)
+                .collect(Collectors.toList());
     }
 
-    // =========================
-    // SEARCH (ENTITY)
-    // =========================
+    // ================= SEARCH =================
     @Override
     public List<User> search(String keyword) {
         return userRepository
@@ -139,97 +140,70 @@ public class UserServiceImpl implements UserService {
                 );
     }
 
-    // =========================
-    // UPDATE
-    // =========================
+    // ================= UPDATE =================
     @Override
-    public User update(Long id, User updatedUser) {
+    public User update(Long id, User requestUser) {
 
-        String email = SecurityContextHolder
-                .getContext()
-                .getAuthentication()
-                .getName();
-
-        User currentUser = userRepository
-                .findByEmailIgnoreCase(email)
-                .orElseThrow(() -> new RuntimeException("Logged user not found"));
-
-        User user = userRepository.findById(id)
+        User targetUser = userRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("User not found"));
 
-        boolean isAdmin = currentUser.getRoles()
-                .stream()
-                .anyMatch(role -> role.getName().equals("ROLE_ADMIN"));
+        User currentUser = getCurrentUser();
 
-        if (!isAdmin && !user.getEmail().equals(email)) {
-            throw new RuntimeException("You can only update your own data");
+        boolean isSelf = targetUser.getId().equals(currentUser.getId());
+
+        boolean isAdmin = currentUser.getRoles().stream()
+                .anyMatch(r -> r.getName().equals("ROLE_ADMIN"));
+
+        if (!isSelf && !isAdmin) {
+            throw new RuntimeException("Access Denied");
         }
 
-        user.setFirstName(updatedUser.getFirstName());
-        user.setLastName(updatedUser.getLastName());
-        user.setPhone(updatedUser.getPhone());
+        targetUser.setFirstName(requestUser.getFirstName());
+        targetUser.setLastName(requestUser.getLastName());
+        targetUser.setPhone(requestUser.getPhone());
 
-        return userRepository.save(user);
+        if (requestUser.getPassword() != null && !requestUser.getPassword().isBlank()) {
+            targetUser.setPassword(passwordEncoder.encode(requestUser.getPassword()));
+        }
+
+        return userRepository.save(targetUser);
     }
 
-    // =========================
-    // DEACTIVATE
-    // =========================
+    // ================= DELETE =================
     @Override
     public void deactivate(Long id) {
 
-        String email = SecurityContextHolder
-                .getContext()
-                .getAuthentication()
-                .getName();
-
-        User currentUser = userRepository
-                .findByEmailIgnoreCase(email)
-                .orElseThrow(() -> new RuntimeException("Logged user not found"));
-
-        User user = userRepository.findById(id)
+        User targetUser = userRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("User not found"));
 
-        boolean isAdmin = currentUser.getRoles()
-                .stream()
-                .anyMatch(role -> role.getName().equals("ROLE_ADMIN"));
+        User currentUser = getCurrentUser();
 
-        if (!isAdmin && !user.getEmail().equals(email)) {
-            throw new RuntimeException("You can only deactivate your own account");
+        boolean isSelf = targetUser.getId().equals(currentUser.getId());
+
+        boolean isAdmin = currentUser.getRoles().stream()
+                .anyMatch(r -> r.getName().equals("ROLE_ADMIN"));
+
+        if (!isSelf && !isAdmin) {
+            throw new RuntimeException("Access Denied");
         }
 
-        user.setIsActive(false);
-        userRepository.save(user);
+        targetUser.setIsActive(false);
+
+        userRepository.save(targetUser);
     }
 
-    // =========================
-    // PAGINATION (DTO FIXED)
-    // =========================
+    // ================= PAGINATION =================
     @Override
     public PageResponse<UserResponseDTO> getAllUsers(int page, int size) {
-
-        Page<User> userPage = userRepository.findAll(PageRequest.of(page, size));
-
-        List<UserResponseDTO> content = userPage.getContent()
-                .stream()
-                .map(UserMapper::toDTO)
-                .toList();
-
-        return new PageResponse<>(
-                content,
-                userPage.getNumber(),
-                userPage.getSize(),
-                userPage.getTotalElements(),
-                userPage.getTotalPages()
-        );
+        return getAllUsers(page, size, "id", "asc");
     }
 
     @Override
     public PageResponse<UserResponseDTO> getAllUsers(int page, int size, String sortBy, String direction) {
 
-        Sort sort = direction.equalsIgnoreCase("desc")
-                ? Sort.by(sortBy).descending()
-                : Sort.by(sortBy).ascending();
+        Sort sort = direction.equalsIgnoreCase("desc") ?
+                Sort.by(sortBy).descending() :
+                Sort.by(sortBy).ascending();
 
         Pageable pageable = PageRequest.of(page, size, sort);
 
@@ -237,15 +211,42 @@ public class UserServiceImpl implements UserService {
 
         List<UserResponseDTO> content = userPage.getContent()
                 .stream()
-                .map(UserMapper::toDTO)
-                .toList();
+                .map(this::mapToDTO)
+                .collect(Collectors.toList());
 
         return new PageResponse<>(
                 content,
                 userPage.getNumber(),
                 userPage.getSize(),
                 userPage.getTotalElements(),
-                userPage.getTotalPages()
+                userPage.getTotalPages(),
+                userPage.isLast()
         );
+    }
+
+    // ================= DTO =================
+    private UserResponseDTO mapToDTO(User user) {
+
+        UserResponseDTO dto = new UserResponseDTO();
+
+        dto.setId(user.getId());
+        dto.setFirstName(user.getFirstName());
+        dto.setLastName(user.getLastName());
+        dto.setFullName(user.getFullName());
+        dto.setEmail(user.getEmail());
+        dto.setPhone(user.getPhone());
+        dto.setIsActive(user.getIsActive());
+        dto.setEmailVerified(user.getEmailVerifiedAt() != null);
+        dto.setPhoneVerified(user.getPhoneVerifiedAt() != null);
+
+        dto.setRoles(
+                user.getRoles().stream()
+                        .map(Role::getName)
+                        .collect(Collectors.toSet())
+        );
+
+        dto.setCreatedAt(user.getCreatedAt());
+
+        return dto;
     }
 }
